--- a/packages/ui-library/src/demo/css/ui-library-demo.css
+++ b/packages/ui-library/src/demo/css/ui-library-demo.css
@@ -1,4 +1,220 @@
-.background-loader-example-wrapper {
-	color: blue;
-	background-image: url('../images/BackgroundLoader-example.png');
-}
+/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { border: 0; font-size: 100%; font: inherit; vertical-align: baseline; margin: 0; padding: 0; }
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+
+body { line-height: 1; }
+
+ol, ul { list-style: none; }
+
+blockquote, q { quotes: none; }
+
+blockquote:before, blockquote:after, q:before, q:after { content: none; }
+
+table { border-collapse: collapse; border-spacing: 0; }
+
+.clearfix { *zoom: 1; }
+.clearfix:before, .clearfix:after { content: " "; /* 1 */ display: table; /* 2 */ }
+.clearfix:after { clear: both; }
+
+@font-face { font-family: 'ProximaNovaRegular'; font-weight: normal; src: url("../fonts/proxima-nova/ProximaNova-Regular.otf"); }
+@font-face { font-family: 'ProximaNovaBold'; font-weight: bold; src: url("../fonts/proxima-nova/ProximaNova-Bold.otf"); }
+@font-face { font-family: 'ProximaNovaLight'; font-weight: normal; src: url("../fonts/proxima-nova/ProximaNova-Light.otf"); }
+@font-face { font-family: 'ProximaNovaSemibold'; font-weight: normal; src: url("../fonts/proxima-nova/ProximaNova-Semibold.otf"); }
+@font-face { font-family: 'ProximaNovaCondRegular'; font-weight: normal; src: url("../fonts/proxima-nova/ProximaNovaCond-Regular.otf"); }
+@font-face { font-family: "iconfont"; src: url("../fonts/icons/iconfont.eot?-sa9xtz"); src: url("../fonts/icons/iconfont.eot?#iefix-sa9xtz") format("embedded-opentype"), url("../fonts/icons/iconfont.ttf?-sa9xtz") format("truetype"), url("../fonts/icons/iconfont.svg?-sa9xtz#icofont") format("svg"), url("../fonts/icons/iconfont.woff?-sa9xtz") format("woff"); font-weight: normal; font-style: normal; }
+[class^="icon-"], [class*=" icon-"] { font-family: 'iconfont'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
+.icon-alert:before { content: "\21"; }
+
+.icon-undo:before { content: "6e"; }
+
+.icon-resend:before { content: "\72"; }
+
+.icon-approve:before { content: "\70"; }
+
+.icon-minus:before { content: "\2d"; }
+
+.icon-plus:before { content: "\2b"; }
+
+.icon-image:before { content: "\69"; }
+
+.icon-progress-1-1:before { content: "\e4"; }
+
+.icon-progress-2-1:before { content: "\d0"; }
+
+.icon-progress-2-2:before { content: "\d1"; }
+
+.icon-progress-3-1:before { content: "\d2"; }
+
+.icon-progress-3-2:before { content: "\d3"; }
+
+.icon-progress-3-3:before { content: "\d4"; }
+
+.icon-progress-4-1:before { content: "\d5"; }
+
+.icon-progress-4-2:before { content: "\d6"; }
+
+.icon-progress-4-3:before { content: "\d7"; }
+
+.icon-progress-4-4:before { content: "\d8"; }
+
+.icon-progress-5-1:before { content: "\d9"; }
+
+.icon-progress-5-2:before { content: "\da"; }
+
+.icon-progress-5-3:before { content: "\db"; }
+
+.icon-progress-5-4:before { content: "\dc"; }
+
+.icon-progress-5-5:before { content: "\dd"; }
+
+.icon-progress-6-1:before { content: "\de"; }
+
+.icon-progress-6-2:before { content: "\df"; }
+
+.icon-progress-6-3:before { content: "\e0"; }
+
+.icon-progress-6-4:before { content: "\e1"; }
+
+.icon-progress-6-5:before { content: "\e2"; }
+
+.icon-progress-6-6:before { content: "\e3"; }
+
+.icon-clear:before { content: "\58"; }
+
+.icon-app:before { content: "\41"; }
+
+.icon-expand:before { content: "\45"; }
+
+.icon-settings:before { content: "\53"; }
+
+.icon-users:before { content: "\55"; }
+
+.icon-account:before { content: "\61"; }
+
+.icon-collapse:before { content: "\63"; }
+
+.icon-delete:before { content: "\64"; }
+
+.icon-edit:before { content: "\65"; }
+
+.icon-cog:before { content: "\67"; }
+
+.icon-help:before { content: "\68"; }
+
+.icon-apps:before { content: "\6c"; }
+
+.icon-menu:before { content: "\6d"; }
+
+.icon-overview:before { content: "\6f"; }
+
+.icon-support:before { content: "\70"; }
+
+.icon-search:before { content: "\73"; }
+
+.icon-user:before { content: "\75"; }
+
+.icon-close-arrow:before { content: "\5e"; }
+
+.icon-dropdown-arrow:before { content: "\76"; }
+
+.icon-welcome:before { content: "\77"; }
+
+.icon-close:before { content: "\78"; }
+
+.icon-success:before { content: "\79"; }
+
+body { font-family: "Proxima Nova", Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.3em; color: #929aa1; font-weight: 300; }
+
+a { cursor: pointer; text-decoration: none; color: #2996cc; }
+a.link { border-bottom: 1px solid #2996cc; padding-bottom: 0px; text-transform: uppercase; }
+a:hover { text-decoration: underline; }
+
+h1, h2, h3, h4, h5 { color: #3d454d; }
+
+h1 { color: #3d454d; font-size: 24px; font-weight: 400; margin: 25px 0; }
+
+h2 { font-size: 22px; font-weight: 500; margin: 0 0 10px 0; }
+
+p { margin: 0 0 1em 0; }
+
+strong { font-weight: bold; }
+
+ol { counter-reset: ol-counter; margin: 30px 0 0 0; }
+ol > li { counter-increment: ol-counter; position: relative; margin: 0 0 10px 20px; padding-top: 1px; }
+ol > li:before { content: counter(ol-counter) "."; position: absolute; top: 0; left: 0; margin: 0 0 0 -20px; text-align: left; }
+
+#header { z-index: 4; position: fixed; overflow: visible; top: 0; left: 0; right: 0; height: 48px; background-color: #5a6267; }
+#header a { color: #3d454d; background-color: transparent; -webkit-transition: all 0.2s; -moz-transition: all 0.2s; -ms-transition: all 0.2s; -o-transition: all 0.2s; transition: all 0.2s; }
+#header .logo { background: transparent url(../images/icon-logo.png) no-repeat 0 0; background-size: contain; height: 54px; width: 54px; margin: 0 0 0 22px; }
+#header .title { position: absolute; bottom: 8px; left: 100px; font-size: 28px; line-height: 1em; font-weight: 400; letter-spacing: -2px; color: #929aa1; }
+#header .title .main { color: #fff; }
+#header .nav { position: absolute; right: 4px; top: 5px; font-size: 24px; }
+#header .nav li { float: left; }
+#header .nav li a { display: inline-block; vertical-align: middle; padding: 6px 20px 3px 20px; border-right: 1px solid rgba(61, 69, 77, 0.5); }
+#header .nav li a:hover { text-decoration: none; color: #fff; }
+#header .nav li:last-child a { border-right: none; }
+#header .nav li:last-child a:hover { text-decoration: none; }
+#header .nav .search input[type=text] { height: 28px; width: 0; margin: 3px 0 0 0; padding: 0; font-size: 16px; filter: alpha(opacity=0); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; opacity: 0; -webkit-transition: all 0.2s; -moz-transition: all 0.2s; -ms-transition: all 0.2s; -o-transition: all 0.2s; transition: all 0.2s; }
+#header .nav .search:before { content: '\73'; font-family: 'icofont'; font-size: 18px; position: absolute; overflow: hidden; left: 6px; top: 8px; color: gray; width: 0; padding: 1px; filter: alpha(opacity=0); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; opacity: 0; }
+#header .nav .search.active:before { width: auto; filter: alpha(opacity=100); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; opacity: 1; }
+#header .nav .search.active input[type=text] { width: 200px; padding: 0 10px 0 36px; filter: alpha(opacity=10000); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10000)"; opacity: 100; }
+#header .nav .search.active a { padding: 0; }
+#header .nav .search.active span { display: none; }
+
+#nav { z-index: 2; position: absolute; top: 48px; bottom: 0; left: 0; width: 250px; }
+#nav:before { z-index: -1; content: ''; position: fixed; background-color: #e4e5e5; border-right: 1px solid #929aa1; top: 48px; bottom: 0; left: 0; width: 250px; }
+#nav .title { margin: 20px 0 10px 22px; text-transform: uppercase; color: #929aa1; font-size: 16px; }
+#nav .title.narrow { margin-top: 5px; }
+#nav ul.menu { font-size: 16px; }
+#nav ul.menu li { position: relative; padding: 1px 1px 1px 0; border-left: 8px solid transparent; -webkit-transition: all 0.2s; -moz-transition: all 0.2s; -ms-transition: all 0.2s; -o-transition: all 0.2s; transition: all 0.2s; }
+#nav ul.menu li a { position: relative; display: block; padding: 0 0 0 15px; line-height: 41px; color: #3d454d; background-color: transparent; }
+#nav ul.menu li a span { display: inline-block; margin: 0 10px; }
+#nav ul.menu li a:hover { text-decoration: none; }
+#nav ul.menu li:hover { background-color: rgba(255, 255, 255, 0.5); text-decoration: none; }
+#nav ul.menu li.selected { background-color: #929aa1; border-left-color: #2996cc; font-family: 'ProximaNovaSemibold'; }
+#nav ul.menu li.selected:after { content: ''; display: block; position: absolute; top: 0; border-width: 22px 7px; border-style: solid; z-index: 1; border-color: transparent transparent transparent #c2c3c4; right: -14px; }
+#nav ul.menu li.selected a { color: #5a6267; background-color: #fff; cursor: default; }
+#nav ul.menu li.selected a:before, #nav ul.menu li.selected a:after { content: ''; display: block; position: absolute; }
+#nav ul.menu li.selected a:before { width: 4px; background-color: #fff; top: 0; bottom: 0; right: -2px; -webkit-border-radius: 1px; -moz-border-radius: 1px; -ms-border-radius: 1px; border-radius: 1px; }
+#nav ul.menu li.selected a:after { top: 1px; border-width: 20px 6px; border-style: solid; z-index: 2; border-color: transparent transparent transparent #fff; right: -13px; }
+#nav ul.menu li ul.sub-menu { list-style: square inside; }
+#nav ul.menu li ul.sub-menu li { display: list-item; }
+#nav ul.menu li ul.sub-menu li a { line-height: 16px; }
+#nav ul.menu:first-child { margin-top: 30px; }
+#nav ul.menu.last { padding-bottom: 30px; }
+
+#content { z-index: 1; position: fixed; overflow-x: hidden; overflow-y: auto; top: 48px; right: 0; bottom: 0; left: 251px; background-color: #fff; padding: 15px 30px 40px; border-top: 1px solid #fff; }
+#content h1:first-of-type { margin-top: 10px; }
+#content .section { padding: 10px 0 30px 0; }
+#content .sub-section { padding: 0 0 20px 0; }
+#content .description { line-height: 1.4em; margin: 0 0 0 2px; }
+#content .description ul { list-style: square inside; }
+#content pre.language-markup, #content pre.language-javascript, #content .output { position: relative; margin-top: 35px; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; border-radius: 3px; }
+#content pre.language-markup:before, #content pre.language-javascript:before, #content .output:before { position: absolute; top: -18px; left: 2px; font-size: 14px; font-family: "ProximaNovaRegular", Helvetica, Arial, sans-serif; font-weight: bold; filter: alpha(opacity=20); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)"; opacity: 0.2; }
+#content pre.language-markup { overflow: visible; }
+#content pre.language-markup:before { content: 'MARKUP'; }
+#content pre.language-javascript { overflow: visible; }
+#content pre.language-javascript:before { content: 'JAVASCRIPT'; }
+#content .output { padding: 20px; border: 1px dashed silver; }
+#content .output:before { content: 'OUTPUT'; }
+#content input[type=text], #content input[type=password], #content textarea { width: 340px; }
+#content textarea { height: 100px; }
+
+code[class*="language-"], pre[class*="language-"] { color: black; text-shadow: 0 1px white; font-family: Consolas, Monaco, 'Andale Mono', monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; -moz-tab-size: 4; -o-tab-size: 4; tab-size: 4; -webkit-hyphens: none; -moz-hyphens: none; -ms-hyphens: none; hyphens: none; }
+
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection { text-shadow: none; background: #b3d4fc; }
+
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection, code[class*="language-"]::selection, code[class*="language-"] ::selection { text-shadow: none; background: #b3d4fc; }
+
+@media print { code[class*="language-"], pre[class*="language-"] { text-shadow: none; } }
+/* Code blocks */
+pre[class*="language-"] { padding: 1em; margin: .5em 0; overflow: auto; }
+
+:not(pre) > code[class*="language-"], pre[class*="language-"] { background: #f5f2f0; }
+
+/* Inline code */
+:not(pre) > code[class*="language-"] { padding: .1em; border-radius: .3em; }
+
+#content .background-loader-example-wrapper { color: blue; background-image: url("../images/BackgroundLoader-example.png"); }
