ID-2786 : update ui lib iconfont with latest from WP / fix path for icon font source files
Change-Id: I2f5b70e527708bd3aeaf4cefb9129ed7f90fc576

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -1,5 +1,5 @@
 
-$font-path: '../fonts/icons/';
+$font-path: '/src/fonts/icons/';
 
 @font-face {
 	font-family: $icon-font;
@@ -212,10 +212,8 @@ $font-path: '../fonts/icons/';
 }
 
 .icon-ellipsis {
-	position: absolute;
-	bottom: 9px;
-	right: -20px;
 	color: $color-white;
+
 	.path-1 {
 		&:before {
 		    content: "\e600";
