ID-2786 : change loader css class to spinner (more descriptive)
Change-Id: Id6bdb04074f430a752f40009e10910dbd6a5cb5e

--- a/packages/ui-library/src/css/loader.scss
+++ b/packages/ui-library/src/css/loader.scss
@@ -27,7 +27,7 @@
 	@include animation (rotation 1.1s infinite linear);
 }
 
-.loader {
+.spinner {
 	$loader-size: 15px;
 
 	position: relative;
@@ -48,7 +48,7 @@
 		@include border-radius($loader-size);
 	}
 }
-button.loading {
+button.spinner {
 	$loader-size: 9px;
 
 	&:before {
