ID-2786 ID-2829 : port DataObjectCheckboxesList to Ui Lib (now FormCheckboxList) / add demo
Change-Id: I4b867a1bbd3a10f68a6a74cfbd4093d92e23c0ff

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1195,6 +1195,51 @@ a {
 	}
 }
 
+.checkbox-list {
+	padding: 10px 5px 10px 0;
+	margin-left: 0;
+	border: 1px solid $color-section-border;
+	.options {
+		width: 99%;
+		height: 133px;
+		max-height: 133px;
+		overflow-y: scroll;
+		padding-left: 10px;
+		label {
+			width: 230px;
+			margin-bottom: 10px;
+			text-transform: none;
+			&.input-checkbox {
+				display: inline-block;
+				padding: 0 0 0 30px;
+				.label-text {
+					display: inline-block;
+					padding-top: 5px;
+				}
+			}
+		}
+		div {
+			display: inline;
+			&.item-head {
+				display: block;
+				color: map-get($colors, 'gray-warm-dark');
+			}
+		}
+	}
+	.actions {
+		display: inline-block;
+		line-height: 48px;
+
+		.toggle-container {
+			display: inline-block;
+			margin: 0 0 0 20px;
+
+			.input-toggle {
+				margin: 0 0 0 10px;
+			}
+		}
+	}
+}
 
 .input-calendar {
 	display: inline-block;
