--- a/packages/ui-library/src/css/ie9.scss
+++ b/packages/ui-library/src/css/ie9.scss
@@ -16,7 +16,7 @@
 	}
 	&.error {
 		select {
-			border-color: 1px solid $color-warning;
+			border-color: 1px solid map-get($colors, 'critical-red');
 		}
 	}
 	&.required {
