--- a/packages/ui-library/src/css/ie8.scss
+++ b/packages/ui-library/src/css/ie8.scss
@@ -42,7 +42,7 @@ label {
 		}
 	}
 	&.show {
-		border: 1px solid map-get($colors, 'gray-warm-dark');
+		border: 1px solid map-get($colors, 'stratus');
 
 		&:after {
 			// ie8 bg fix
@@ -56,11 +56,11 @@ label {
 }
 a.input-toggle {
 	width: 16px;
-	border-left: 28px solid map-get($colors, 'slate-extra');
+	border-left: 28px solid map-get($colors, 'midnight');
 
 	&.selected {
 		border-left: none;
-		border-right: 28px solid map-get($colors, 'slate-extra');
+		border-right: 28px solid map-get($colors, 'midnight');
 	}
 }
 
