--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -35,7 +35,7 @@
 	.modal-header {
 		position: relative;
 		padding: 15px 25px;
-		background-color: map-get($colors, 'gray-warm-dark');
+		background-color: map-get($colors, 'walrus');
 		color: $color-white;
 		font-size: 22px;
 		line-height: 14px;
@@ -86,14 +86,14 @@
 		background-color: map-get($colors, 'elderly');
 
 		h2 {
-			color: map-get($colors, 'slate-extra');
+			color: map-get($colors, 'midnight');
 			padding: 20px 0 5px 48px;
 			margin-bottom: 0;
 		}
 
 		p {
 			margin-bottom: 1.0em;
-			color: map-get($colors, 'gray-medium-dark');
+			color: map-get($colors, 'elephant');
 			font-size: 14px;
 
 			a {
