--- a/packages/ui-library/src/css/policy-engine.scss
+++ b/packages/ui-library/src/css/policy-engine.scss
@@ -1,7 +1,7 @@
 // TEXT STYLE MIXINS
 @mixin section-title-text {
     text-transform: uppercase;
-    color: $color-gray-medium;
+    color: map-get($colors, 'rhino');
 }
 
 // LAYOUT STYLES MIXINS
@@ -13,10 +13,10 @@
     padding-left: 27px;
 }
 @mixin top-rule {
-    border-top: 1px solid $color-gray-medium;
+    border-top: 1px solid map-get($colors, 'rhino');
 }
 @mixin bottom-rule {
-    border-bottom: 1px solid $color-gray-medium;
+    border-bottom: 1px solid map-get($colors, 'rhino');
 }
 
 // POPOVER AND MENU ITEM MIXINS
@@ -25,10 +25,10 @@
     padding: 7px 20px;
     line-height: 20px;
     &.active {
-        background: $color-inline-hover;
+        background: map-get($colors, 'elderly');
     }
     &:hover {
-        background: $color-inline-hover;
+        background: map-get($colors, 'elderly');
         text-decoration: none;
     }
 }
@@ -42,7 +42,7 @@
         position: absolute;
         top: 22px;
         right: 26px;
-        color: $color-slate;
+        color: map-get($colors, 'elephant');
     }
     .menu {
         display: none;
@@ -69,7 +69,7 @@
                         content: '\2b';
                         font-size: 10px;
                         position: absolute;
-                        left: 3px;
+                        left: 6px;
                     }
                 }
             }
@@ -231,7 +231,7 @@
                         text-transform: none;
                         font-size: 12px;
                         font-family: 'iconfont';
-                        color: $color-button-default-text;
+                        color: map-get($colors, 'slate');
                     }
                     &:hover {
                         text-decoration: none;
@@ -284,7 +284,7 @@
         .locations {
             margin-top: 15px;
             li {
-                color: $color-input-border-focus;
+                color: map-get($colors, 'active-blue');
                 padding: 4px 20px;
                 position: relative;
 
@@ -336,6 +336,6 @@
         position: absolute;
         top: 0;
         padding: 20px;
-        color: $color-gray-medium;
+        color: map-get($colors, 'rhino');
     }
 }
