--- a/packages/ui-library/src/css/settings-sections.scss
+++ b/packages/ui-library/src/css/settings-sections.scss
@@ -42,7 +42,7 @@
     .section-title {
 		text-transform: uppercase;
         font-size: 16px;
-	    color: $color-gray-medium;
+	    color: map-get($colors, 'rhino');
         font-family: $font-pn-regular;
         position: relative;
 
@@ -54,7 +54,7 @@
         }
     }
     .section-sub-title {
-	    color: $color-gray-medium;
+	    color: map-get($colors, 'rhino');
         font-size: 12px;
         font-family: $font-pn-light;
         text-transform: none;
@@ -252,7 +252,7 @@
             font-size: 13px;
         }
         &.section {
-            color: $color-gray-medium;
+            color: map-get($colors, 'rhino');
             font-size: 16px;
             font-weight: 600;
             padding-bottom: 10px;
@@ -318,7 +318,7 @@
             display: none;
             min-height: 500px;
             border: 1px solid $color-input-border;
-            background-color: $color-warm;
+            background-color: map-get($colors, 'stone');
             position: relative;
             padding: 0;
 
