--- a/packages/ui-library/src/css/task.scss
+++ b/packages/ui-library/src/css/task.scss
@@ -2,7 +2,7 @@
 	$inactive-opacity: 0.5;
 
 	padding: 12px;
-	border: 1px solid transparentize(map-get($colors, 'gray-ice-light'), $inactive-opacity);
+	border: 1px solid transparentize(map-get($colors, 'timberwolf'), $inactive-opacity);
 	background-color: transparentize($color-white, $inactive-opacity);
 	margin: 0 0 14px 0;
 
@@ -25,7 +25,7 @@
 		}
 	}
 	&.active {
-		border: 1px solid map-get($colors, 'gray-ice-light');
+		border: 1px solid map-get($colors, 'timberwolf');
 		background-color: $color-white;
 
 		.task-title {
@@ -108,7 +108,7 @@
 		line-height: 1em;
 		padding: 0 0 5px 0;
 		margin: 30px 0 25px 0;
-		border-bottom: 1px solid map-get($colors, 'gray-warm-medium-light');
+		border-bottom: 1px solid map-get($colors, 'stone');
 
 		.help-tooltip {
 			margin: 0 0 0 10px;
@@ -134,7 +134,7 @@
 	.loading-message {
 		font-size: 19px;
 		font-weight: bold;
-		color: map-get($colors, 'gray-medium-dark');
+		color: map-get($colors, 'elephant');
 
 		.loader {
 			margin: 0 10px -4px 0;
